--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@types/node": "^22.13.0",
+    "@types/xast": "^2.0.4",
     "unbuild": "^3.3.1",
     "vitest": "^3.0.4"
   },
@@ -34,6 +35,9 @@
     "@lukeed/uuid": "^2.0.1",
     "@zip.js/zip.js": "^2.7.57",
     "defu": "^6.1.4",
-    "mime": "^4.0.6"
+    "mime": "^4.0.6",
+    "unist-builder": "^4.0.0",
+    "xast-util-to-xml": "^4.0.0",
+    "xastscript": "^4.0.0"
   }
 }
