--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "license": "BSD-3-Clause",
   "exports": {
     ".": {
-      "types": "./dist/index.d.mts",
+      "types": "./dist/index.d.ts",
       "import": "./dist/index.mjs"
     }
   },
