--- a/package.json
+++ b/package.json
@@ -37,16 +37,17 @@
     "test": "vitest"
   },
   "devDependencies": {
-    "@types/node": "^22.15.2",
+    "@types/node": "^25.0.3",
     "@types/xast": "^2.0.4",
-    "unbuild": "^3.5.0",
-    "vitest": "^3.1.2"
+    "typescript": "^5.9.3",
+    "unbuild": "^3.6.1",
+    "vitest": "^4.0.16"
   },
   "dependencies": {
     "@lukeed/uuid": "^2.0.1",
-    "@zip.js/zip.js": "^2.7.60",
+    "@zip.js/zip.js": "^2.8.11",
     "defu": "^6.1.4",
-    "mime": "^4.0.7",
+    "mime": "^4.1.0",
     "unist-builder": "^4.0.0",
     "xast-util-to-xml": "^4.0.0",
     "xastscript": "^4.0.0"
